KD#636 - CPU Integration: Online payments
This feature adds possibility for borrowers to pay his fines and charges from
home via online payments.

With the help of previously implementeted integration of cash registers, we can
easily use the same modules and database tables for online payments as well.

This feature specifically implements only CPU online payments API. To extend
the feature for other providers, some work is required to modify opac-paycollect.pl
(and members/paycollect.pl (KD#377) for cash register integration). One option
would be to use drivers similiar to SMS::Send drivers.

DATABASE:
All the payments (transactions) are stored in payments_transactions table. In
order to find out which accountlines belong to a specific payment, we use
payments_transactions_accountlines table with foreign key references to both
payments_transactions and accountlines. To separate cash register payments
and online payments, there is a column 'is_self_payment' in payments_transactions
(value 1 => online payment, value 0 => cash register payment).

ITEM CODES:
Koha translates accounttypes into CPU item codes by using YAML-configuration provided
in "cpuitemnumbers_online_shop" system preference. The configuration can also specify
different item codes for each branch separately (e.g. for statistical reasons). It can
also use the same item codes for all branches, which is probably the default case.
Prices of items being paid are simply taken from accountlines for each product.
The branch used is the Borrower's home library (with KD#636 update 2016-05-20 item home
branch, and Borrower home library if accountline has no itemnumber).
The configuration (with description in brackets) is as follows:
(example 1, per-branch)
CPL:
  FU: shop_item_1 (maps koha item FU to online shop item shop_item_1)
  Default: shop_item_2 (maps all other koha items except FU to shop_item_2)
MPL:
  Default: shop_item_3
Default: (all other branches except BRANCH and BRANCH_TWO)
  Default: shop_item_4

--- a/koha-tmpl/opac-tmpl/bootstrap/en/modules/opac-user.tt
+++ b/koha-tmpl/opac-tmpl/bootstrap/en/modules/opac-user.tt
@@ -92,7 +92,7 @@
                                     <li id="lost"><strong>Please note: </strong> Your library card has been marked as lost or stolen. If this is an error, please contact the library.</li>
                                 [% END %]
                                 [% IF ( renewal_blocked_fines ) && ( OpacRenewalAllowed ) %]
-                                    <li id="renewal_blocked_fines"><strong>Please note: </strong> Since you have <a href="/cgi-bin/koha/opac-account.pl">[% IF renewal_blocked_fines != "0.00" %] more than <span id="renewal_blocked_fines_amount">[% renewal_blocked_fines %]</span> in [% END %] fines</a>, you cannot renew your books online. Please pay your fines if you wish to renew your books.</li>
+                                    <li id="renewal_blocked_fines"><strong>Please note: </strong> Since you have <a href="/cgi-bin/koha/opac-account.pl">[% IF renewal_blocked_fines != "0.00" %] more than <span id="renewal_blocked_fines_amount">[% renewal_blocked_fines %]</span> in [% END %] fines</a>, you cannot renew your books online. Please <a href="/cgi-bin/koha/opac-account.pl">pay your fines</a> if you wish to renew your books.</li>
                                 [% END %]
                             </ul>
                         </div>
@@ -289,6 +289,7 @@
                                             </tr>
                                         </tbody>
                                     </table>
+                                    <p>Pay <a href="/cgi-bin/koha/opac-account.pl">fines and charges</a>.</p>
                                 </div>
                             [% END %]
 
@@ -303,6 +304,7 @@
                                             </tr>
                                         </tbody>
                                     </table>
+                                    <p>Pay <a href="/cgi-bin/koha/opac-account.pl">fines and charges</a>.</p>
                                 </div>
                             [% END %]
 
