KD#745 - Rename Koha::PaymentsTransactions REST API endpoint
Change /pos/cpu/<payment_id> to /payments/transactions/<payment_id>

The transactions are not only related to CPU. They could be related to
any POS integration provider. Therefore, in case someone will ever extend
the feature, rename it to avoid confusion.

Also split KOHA/REST/V1/POSIntegration.pm into two parts
-> Koha/REST/V1/Payments/Transactions.pm (GET transactions)
-> Koha/REST/V1/Pos/CPU/Reports.pm (POST reports)

Fix REST tests to work with the changed endpoint.

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/paycollect.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/paycollect.tt
@@ -224,7 +224,7 @@ function moneyFormat(textObj) {
                 handlePOSResponse(data);
             });
             $("#recheck").click(function() {
-                $.get("/api/v1/pos/cpu/" + [% payment.Id %], function(data) {
+                $.get("/api/v1/payments/transactions/" + [% payment.Id %], function(data) {
                     var response = jQuery.parseJSON(JSON.stringify(data));
 
                     handlePOSResponse(response);
