KD#1132, moved ssn url to Koha's config.
Add this to koha-conf.xml:

<ssnProvider>
 <ssn_url>http://myaddress.com</ssn_url>
</ssnProvider>

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/memberentrygen.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/memberentrygen.tt
@@ -439,6 +439,9 @@
                 <input type="password" name="ssn_password" class="valid">
             </li>
             <li>
+                <input type="hidden" name="ssn_url" value="[% ssn_url %]">
+            </li>
+            <li>
                 <label for="ssn_ssn" class="">Sotu: </label>
                 <input type="text" name="ssn_ssn" class="valid">
             </li>
